maybe fix background scroll on mobile???

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 body {
   margin: 0;
   z-index: 1;
-  min-height: 200vh;
+  min-height: 200lvh;
   height: 1600px;
   position: relative;
 }
@@ -27,8 +27,11 @@ main {
 
 canvas {
   image-rendering: pixelated;
-  height: 100vh;
-  width: 100vw;
+  height: 100lvh !important;
+  width: 100vw !important;
+  position: fixed;
+  bottom: 0;
+
 }
 
 .for-sale-tag {
@@ -46,6 +49,10 @@ canvas {
 
 #built-by a {
   color: #fff;
-  text-decoration: none;
+  text-underline-offset: 5px;
   font-weight: bold;
+}
+
+#built-by a:hover {
+  text-shadow: 0px 0px 20px #ffffff8a;
 }
