--- a/src/screens/Home/components/Modal.css
+++ b/src/screens/Home/components/Modal.css
@@ -133,7 +133,7 @@
 }
 
 .prints-sidebar p {
-  margin-bottom: 37px;
+  margin-bottom: 17px;
 }
 
 @media screen and (max-width: 1000px) {
